[gd_scene load_steps=2 format=3 uid="uid://b06d2fypc8o5p"]

[ext_resource type="Script" path="res://core/ui/join_game_dialog.gd" id="1_gp5kc"]

[node name="JoinGameDialog" type="PopupPanel"]
disable_3d = true
title = "Select a server..."
initial_position = 4
size = Vector2i(800, 800)
visible = true
script = ExtResource("1_gp5kc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Available servers"
horizontal_alignment = 1

[node name="ServerList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_height = true
item_count = 1
item_0/text = "localhost"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Address"

[node name="ServerAddress" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="item_selected" from="VBoxContainer/ServerList" to="." method="_on_server_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
